chore: Update 2025-08-13-RabbitMQ1.md

--- a/_posts/2025-08-13-RabbitMQ1.md
+++ b/_posts/2025-08-13-RabbitMQ1.md
@@ -9,6 +9,6 @@ math: true
 mermaid: true
 image:
   path: /assets/images/rabbitmq-logo.png
-  lqip: 
+  lqip: /assets/images/rabbitmq-blur.png
   alt: RabbitMQ with Java integration
 ---
